@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-21T00:42:05Z",
+  "timestamp" : "2022-05-21T16:11:49Z",
   "count_outdated" : 130,
   "uniques_outdated" : 8,
-  "count" : 389,
-  "uniques" : 18,
+  "count" : 390,
+  "uniques" : 19,
   "views" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-05-19T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
